@@ -24,6 +24,11 @@ class CallsController < ApplicationController
     @order = Call.column_names.collect{|column_name| "calls.#{column_name}"}.include?(params[:order].to_s.split(' ').first) ? params[:order] : "calls.patient_id"
     call_scope = call_scope.order(@order)
 
+    if params[:format] == 'csv'
+      generate_csv(call_scope)
+      return
+    end
+
     @call_count = call_scope.count
     @calls = call_scope.page(params[:page]).per(20) # (current_user.calls_per_page)
   end
@@ -112,6 +117,37 @@ class CallsController < ApplicationController
       redirect_to calls_path, notice: 'Call was successfully deleted.'
     else
       redirect_to root_path
+    end
+  end
+
+  private
+
+  def generate_csv(call_scope)
+    if params[:format] == 'csv'
+      @csv_string = CSV.generate do |csv|
+        csv << ["Patient ID", "Subject Code", "Call Time", "Call Type", "Response", "Response Code", "Participation", "Participation Code", "Exclusion", "Exclusion Code", "Berlin", "ESS", "Eligibility", "Direction", "Comments"]
+        call_scope.each do |call|
+          csv << [
+            call.patient.id,
+            call.patient.subject_code,
+            call.call_time.strftime("%Y-%m-%d %T %z"),
+            call.call_type_name,
+            call.response_name,
+            call.response,
+            call.participation_name,
+            call.participation,
+            call.exclusion_name,
+            call.exclusion,
+            call.berlin,
+            call.ess,
+            call.eligibility,
+            call.direction,
+            call.comments
+          ]
+        end
+      end
+      send_data @csv_string, type: 'text/csv; charset=iso-8859-1; header=present',
+                            disposition: "attachment; filename=\"Calls #{Time.now.strftime("%Y.%m.%d %Ih%M %p")}.csv\""
     end
   end
 
