@@ -1,6 +1,8 @@
 == 0.7.9
 
 * Enhancements
+  * CSV Exports added for:
+    * Calls: Patient ID, Subject Code, Call Time, Call Type, Response, Participation, Exclusion, Berlin, ESS, Eligibility, Direction, Comments
   * Data dictionary export updated to include mailings
 
 == 0.7.8
